# pandoc-slim

./: MANUAL.txt  README.md  cabal.project  pandoc-slim.cabal  pandoc.cabal  stack.yaml
data/templates/: default.latex
src/Text/Pandoc/: Citeproc.hs  Class.hs  Error.hs  Options.hs  Parsing.hs  Readers.hs  Shared.hs  Writers.hs
src/Text/Pandoc/App/: CommandLineOptions.hs
src/Text/Pandoc/Citeproc/: BibTeX.hs
src/Text/Pandoc/Class/: CommonState.hs  IO.hs  PandocIO.hs  PandocMonad.hs  PandocPure.hs
src/Text/Pandoc/Readers/: LaTeX.hs  Markdown.hs
src/Text/Pandoc/Writers/: HTML.hs  LaTeX.hs
test/command/: pandoc-citeproc-119.md  pandoc-citeproc-152.md  pandoc-citeproc-27.md  pandoc-citeproc-312.md  pandoc-citeproc-320.md  pandoc-citeproc-327.md  pandoc-citeproc-386.md  pandoc-citeproc-392.md  pandoc-citeproc-401.md  pandoc-citeproc-416.md  pandoc-citeproc-53.md  pandoc-citeproc-75.md  pandoc-citeproc-chicago-author-date.md  pandoc-citeproc-ieee.md  pandoc-citeproc-issue325.md  pandoc-citeproc-issue371.md
