cabal-version:   2.2
name:            pandoc-slim
version:         2.10.1
build-type:      Simple
license:         GPL-2.0-or-later
license-file:    COPYING.md
copyright:       (c) 2006-2020 John MacFarlane
author:          John MacFarlane <jgm@berkeley.edu>
maintainer:      John MacFarlane <jgm@berkeley.edu>
bug-reports:     https://github.com/jgm/pandoc/issues
stability:       alpha
homepage:        https://pandoc.org
category:        Text
tested-with:     GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5,
                 GHC == 8.8.3, GHC == 8.10.1
synopsis:        Conversion between markup formats
description:     Pandoc is a Haskell library for converting from one markup
                 format to another, and a command-line tool that uses
                 this library. It can read several dialects of Markdown and
                 (subsets of) HTML, reStructuredText, LaTeX, DocBook, JATS,
                 MediaWiki markup, DokuWiki markup, TWiki markup,
                 TikiWiki markup, Jira markup, Creole 1.0, Haddock markup,
                 OPML, Emacs Org-Mode, Emacs Muse, txt2tags, ipynb (Jupyter
                 notebooks), Vimwiki, Word Docx, ODT, EPUB, FictionBook2,
                 roff man, Textile, and CSV, and it can write Markdown,
                 reStructuredText, XHTML, HTML 5, LaTeX, ConTeXt, DocBook,
                 JATS, OPML, TEI, OpenDocument, ODT, Word docx,
                 PowerPoint pptx, RTF, MediaWiki, DokuWiki, XWiki,
                 ZimWiki, Textile, Jira, roff man, roff ms, plain text,
                 Emacs Org-Mode, AsciiDoc, Haddock markup,
                 EPUB (v2 and v3), ipynb, FictionBook2,
                 InDesign ICML, Muse, LaTeX beamer slides,
                 and several kinds of HTML/JavaScript slide shows
                 (S5, Slidy, Slideous, DZSlides, reveal.js).
                 .
                 In contrast to most existing tools for converting Markdown
                 to HTML, pandoc has a modular design: it consists of a set of
                 readers, which parse text in a given format and produce a
                 native representation of the document, and a set of writers,
                 which convert this native representation into a target
                 format. Thus, adding an input or output format requires
                 only adding a reader or writer.
source-repository head
  type:          git
  location:      git://github.com/plt-hokusai/pandoc-slim.git

library
  build-depends: base >= 4.9 && < 5,
                 syb >= 0.1 && < 0.8,
                 containers >= 0.4.2.1 && < 0.7,
                 unordered-containers >= 0.2 && < 0.3,
                 parsec >= 3.1 && < 3.2,
                 mtl >= 2.2 && < 2.3,
                 exceptions >= 0.8 && < 0.11,
                 filepath >= 1.1 && < 1.5,
                 process >= 1.2.3 && < 1.7,
                 directory >= 1.2.3 && < 1.4,
                 bytestring >= 0.9 && < 0.11,
                 text >= 1.1.1.0 && < 1.3,
                 safe >= 0.3 && < 0.4,
                 HTTP >= 4000.0.5 && < 4000.4,
                 texmath >= 0.12.0.2 && < 0.13,
                 xml >= 1.3.12 && < 1.4,
                 split >= 0.2 && < 0.3,
                 pandoc-types >= 1.22 && < 1.23,
                 aeson >= 0.7 && < 1.6,
                 aeson-pretty >= 0.8.5 && < 0.9,
                 tagsoup >= 0.14.6 && < 0.15,
                 base64-bytestring >= 0.1 && < 1.2,
                 skylighting >= 0.10 && < 0.11,
                 skylighting-core >= 0.10 && < 0.11,
                 data-default >= 0.4 && < 0.8,
                 blaze-html >= 0.9 && < 0.10,
                 blaze-markup >= 0.8 && < 0.9,
                 binary >= 0.5 && < 0.11,
                 SHA >= 1.6 && < 1.7,
                 deepseq >= 1.3 && < 1.5,
                 Glob >= 0.7 && < 0.11,
                 doctemplates >= 0.8.2 && < 0.9,
                 network-uri >= 2.6 && < 2.7,
                 unicode-transforms >= 0.3 && < 0.4,
                 HsYAML >= 0.2 && < 0.3,
                 doclayout >= 0.3 && < 0.4,
                 attoparsec >= 0.12 && < 0.14,
                 text-conversions >= 0.3 && < 0.4,
                 emojis >= 0.1 && < 0.2
  if os(windows) && arch(i386)
     build-depends: basement >= 0.0.10,
                    foundation >= 0.0.23
                    -- basement 0.0.9 won't build on 32-bit windows.
  if impl(ghc < 8.4)
     hs-source-dirs: prelude
     other-modules:  Prelude
     build-depends:  base-compat >= 0.9

  if os(windows)
    cpp-options:      -D_WINDOWS
  else
    build-depends:  unix >= 2.4 && < 2.8

  if os(windows)
    cpp-options:      -D_WINDOWS

  ghc-options:     -Wall -fno-warn-unused-do-bind
                   -Wincomplete-record-updates
                   -Wnoncanonical-monad-instances
  -- Later:
  -- -Wpartial-fields        (currently used in Powerpoint writer)
  -- -Wmissing-export-lists  (currently some Odt modules violate this)
  -- -Wredundant-constraints (problematic if we want to support older base)
  if impl(ghc >= 8.2)
    ghc-options:     -Wcpp-undef
  if impl(ghc >= 8.4)
    ghc-options:     -Wincomplete-uni-patterns
                     -Widentities
                     -Werror=missing-home-modules
                     -fhide-source-paths

  default-language: Haskell2010
  other-extensions: NoImplicitPrelude
  hs-source-dirs:  src

  exposed-modules: Text.Pandoc,
                   Text.Pandoc.Options,
                   Text.Pandoc.Extensions,
                   Text.Pandoc.Shared,
                   Text.Pandoc.MediaBag,
                   Text.Pandoc.Error,
                   Text.Pandoc.Readers,
                   Text.Pandoc.Readers.Markdown,
                   Text.Pandoc.Writers,
                   Text.Pandoc.Writers.HTML,
                   Text.Pandoc.UTF8,
                   Text.Pandoc.Templates,
                   Text.Pandoc.XML,
                   Text.Pandoc.Highlighting,
                   Text.Pandoc.Logging,
                   Text.Pandoc.MIME,
                   Text.Pandoc.Parsing,
                   Text.Pandoc.Asciify,
                   Text.Pandoc.Emoji,
                   Text.Pandoc.ImageSize,
                   Text.Pandoc.BCP47,
                   Text.Pandoc.Class
  other-modules:   Text.Pandoc.Class.CommonState,
                   Text.Pandoc.Class.IO,
                   Text.Pandoc.Class.PandocMonad,
                   Text.Pandoc.Class.PandocIO,
                   Text.Pandoc.Class.PandocPure,
                   Text.Pandoc.CSS,
                   Text.Pandoc.Slides,
                   Text.Pandoc.Readers.HTML,
                   Text.Pandoc.Readers.LaTeX,
                   Text.Pandoc.Readers.LaTeX.Lang,
                   Text.Pandoc.Readers.LaTeX.Parsing,
                   Text.Pandoc.Readers.LaTeX.SIunitx,
                   Text.Pandoc.Readers.LaTeX.Types,
                   Text.Pandoc.Readers.Metadata,
                   Text.Pandoc.Writers.AnnotatedTable,
                   Text.Pandoc.Writers.Math,
                   Text.Pandoc.Writers.Shared
  buildable:       True
